# SportAgent

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: binaries.yml  publish.yml  test.yml
sportagent/: __init__.py  cli.py  default_config.py  live_ui.py  onboarding.py  reporting.py  run_logging.py  wizard.py
sportagent/core/: __init__.py
sportagent/core/agents/: __init__.py  schemas.py
sportagent/core/agents/analysts/: __init__.py  news_injury_analyst.py  odds_analyst.py  sentiment_analyst.py  stats_analyst.py
sportagent/core/agents/managers/: __init__.py  decision_manager.py  research_manager.py
sportagent/core/agents/researchers/: __init__.py  bear_researcher.py  bull_researcher.py
sportagent/core/agents/risk/: __init__.py  aggressive_debator.py  conservative_debator.py  neutral_debator.py
sportagent/core/agents/trader/: __init__.py  trader.py
sportagent/core/agents/utils/: __init__.py  agent_utils.py  game_state.py  memory.py  probability.py  structured.py  tools.py
sportagent/core/dataflows/: __init__.py  config.py  interface.py  kalshi.py  kalshi_auth.py  odds_api.py  odds_validator.py  openweb_news.py  reddit.py
sportagent/core/graph/: __init__.py  conditional_logic.py  propagation.py  reflection.py  setup.py  signal_processing.py  sport_graph.py
sportagent/core/llm_clients/: __init__.py  claude_code_proxy.py  codex_proxy.py  factory.py
sportagent/sports/: __init__.py  base.py
sportagent/sports/nba/: __init__.py  adapter.py  stats.py
sportagent/sports/soccer/: __init__.py  adapter.py  stats.py
tests/: test_cli_proxy.py  test_probability.py  test_signal_processing.py  test_soccer.py  test_stats_signals.py
