[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sportagent"
version = "0.3.0"
description = "SportAgent: Multi-Agent LLM framework for Kalshi sports markets"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Paul le Cimanova"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3.81",
    "langchain-anthropic>=0.3.15",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.0.0",
    "requests>=2.32.4",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.21.0",
    "rich>=14.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Paul-le-cimanova/SportAgent"
Repository = "https://github.com/Paul-le-cimanova/SportAgent"
Changelog = "https://github.com/Paul-le-cimanova/SportAgent/blob/main/CHANGELOG.md"
Issues = "https://github.com/Paul-le-cimanova/SportAgent/issues"

[project.scripts]
sportagent = "sportagent.cli:app"

[tool.setuptools.packages.find]
include = ["sportagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"